--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Asana Gantt Chart Viewer</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="https://cdn.jsdelivr.net/npm/apexgantt@latest/dist/apexgantt.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/apexgantt"></script>
 </head>
 <body>
     <div class="container">
